[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-kmeans"
version = "0.1.0"
authors = [
  { name="Adrien Bolling", email="bolling.adrien@gmail.com" },
]
description = "Kmeans clustering with pytorch"
license = { text="GPL-3"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "tqdm",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AdrienBolling/torch-kmeans"
Issues = "https://github.com/AdrienBolling/torch-kmeans/issues"