[metadata]
name = torch-kmeans
version = 0.1.0
author = Adrien Bolling
author_email = bolling.adrien@gmail.com
description = KMeans clustering with PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdrienBolling/torch-kmeans
project_urls =
    Bug Tracker = https://github.com/AdrienBolling/torch-kmeans/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    torch
    tqdm

packages = find:
python_requires = >=3.8